--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,4 +1,4 @@
-.btn{
+/* .btn{
     background-color: #ff1493!important;
     font-weight: 600!important;
     margin-right: 60px!important;
@@ -6,4 +6,204 @@
     color:aliceblue!important;
     margin-top: 10px!important;
   
+} */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+
 }
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    cursor: url('../cursor.png'),pointer,auto;   
+}
+.container{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+
+}
+.container .face{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: #ffcd00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 20px;
+}
+.container .face:hover{
+    background: linear-gradient(180deg, #f44336, #f44336, #ffcd00);
+    cursor: url('../cursor.png'),pointer!important;
+}
+.container .face::before{
+    content: '';
+    position: absolute;
+    top: 113px;
+    width: 114px;
+    height: 56px;
+    border-bottom-left-radius: 70px;
+    border-bottom-right-radius: 70px;
+    background: #b57700;
+    transition: 0.5s;
+
+}
+.container .face:hover:before{
+    top: 130px;
+    width: 100px;
+    height: 20px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    background: #9d0b00;
+}
+.container .face .eyes{
+    position: relative;
+    top: -16%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.container .face .eyes .eye{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    display: block;
+    margin: 0 15px;
+    background: #fff;
+    border-radius: 50%;
+}
+.container .face .eyes .eye:before{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 25px;
+    transform: translate(-50%, -50%);
+    width: 30px;
+    height: 30px;
+    background-color: #333;
+    border-radius: 50%;
+}
+.container h2{
+    position: absolute;
+    top: 75px;
+    font-size: 2em;
+    color: black;
+}
+.container h2:last-child{
+    position: absolute;
+    top: initial;
+    bottom: 75px;
+    font-size: 2em;
+    color: black;
+}
+/* @media screen and (max-width: 768px){
+    .face {
+        display: inline;
+        width: 50px;
+        height: 50px;
+        border
+    }
+} */
+
+@media only screen and (max-width: 768px) {
+    body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        cursor: url('../cursor.png'),pointer,auto;   
+    }
+    .container{
+        position: relative;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        width: 100%;
+        bottom: 70px;
+    
+    }
+    .container .face{
+        position: relative;
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        background-color: #ffcd00;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 90px;
+    }
+    .container .face:hover{
+        background: linear-gradient(180deg, #f44336, #f44336, #ffcd00);
+        cursor: url('../cursor.png'),pointer!important;
+    }
+    .container .face::before{
+        content: '';
+        position: absolute;
+        top: 90px;
+        width: 70px;
+        height: 33px;
+        border-bottom-left-radius: 70px;
+        border-bottom-right-radius: 70px;
+        background: #b57700;
+        transition: 0.5s;
+    
+    }
+    .container .face:hover:before{
+        top: 100px;
+        width: 50px;
+        height: 10px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+        background: #9d0b00;
+    }
+    .container .face .eyes{
+        position: relative;
+        top: -16%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .container .face .eyes .eye{
+        position: relative;
+        width: 20px;
+        height: 20px;
+        display: block;
+        margin: 0 15px;
+        background: #fff;
+        border-radius: 50%;
+    }
+    .container .face .eyes .eye:before{
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translate(-50%, -50%);
+        width: 10px;
+        height: 10px;
+        background-color: #333;
+        border-radius: 50%;
+    }
+    .container h2{
+        position: absolute;
+        top: 80px;
+        font-size: 1em;
+        color: black;
+    }
+    .container h2:last-child{
+        position: absolute;
+        top: initial;
+        bottom: -110px;
+        font-size: 1em;
+        color: black;
+    }
+  }
